finally fixed the shifting (i hope)

--- a/projects/style.css
+++ b/projects/style.css
@@ -82,6 +82,7 @@ body{
     margin-left: 20px;
     margin-right: 20px;
     position: relative;
+    margin-bottom: 10px;
 }
 
 
@@ -108,7 +109,7 @@ body{
 }
 
 .project:hover .project-content-container{
-    display: block;
+    display:block;
 }
 
 .project:hover img{
@@ -132,7 +133,8 @@ body{
 .project p1{
     opacity: 0%;
     display: block;
-    height:30vh;
+    height:50vh;
+    font-size: 20px;
 }
 
 .project:hover{
@@ -162,12 +164,13 @@ body{
 .project-option-button{
     padding: 3px;
     margin: 2px;
-    font-size: 2vh;
+    font-size: 90%;
     border: 4px solid black;
     border-radius: 5px;
     background-color: aqua;
     text-align: center;
     font-family: 'Lato', sans-serif;
+
 }
 
 footer{
@@ -178,3 +181,4 @@ footer{
     text-align: center;
     padding: 10px;
 }
+
